[package]
name = "ass-rs"
version = "0.8.1"
authors = ["Michael A. Plikk <michael@plikk.com>"]
description = "A library for working with Aptoma Smooth Storage"
edition = "2018"
license = "MIT"
repository = "https://github.com/mipli/ass-rs"
documentation = "https://docs.rs/septem/latest/ass-rs/"
readme = "README.md"
keywords = []

[dependencies]
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.36"
reqwest = "0.9.*"
ring = "0.14.2"
failure = "0.1.5"
failure_derive = "0.1.5"
