[package]
name = "ass-rs"
version = "2.0.0"
authors = ["Michael A. Plikk <michael@plikk.com>"]
description = "A library for working with Aptoma Smooth Storage"
edition = "2018"
license = "MIT"
repository = "https://github.com/mipli/ass-rs"
documentation = "https://docs.rs/septem/latest/ass-rs/"
readme = "README.md"
keywords = []

[dependencies]
mockito = "0.25"
serde = "1.0"
serde_json = "1.0.36"
reqwest = "0.9.*"
ring = "0.14.2"
derive_more = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
